--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 mb-2">
-                        <a href="{{ url_for('approval_workflow_new') }}" class="btn btn-secondary w-100">
+                        <a href="{{ url_for('approval_workflow_new_form') }}" class="btn btn-secondary w-100">
                             <i class="fas fa-route"></i> New Workflow
                         </a>
                     </div>
